--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href="https://github.com/falconhack1"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                      <li><a href="https://github.com/karnbothra12"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
                       <li><a href="https://linkedin.com/in/karanbothra12"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                       <li><a href="https://twitter.com/KaranBothra12"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
                     </ul>
@@ -435,8 +435,6 @@
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="lib/lightbox/js/lightbox.min.js"></script>
   <script src="lib/typed/typed.min.js"></script>
-  <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
